unpackaged/main/default/objects/Account_Ownership_Request__c/Account_Ownership_Request__c.object-meta.xml
<CustomObject>
    <label>Account Ownership Request</label>
    <nameField>
        <label>Account Ownership Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Ownership Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>