unpackaged/main/default/objects/Account_Ownership_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Ownership_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>