unpackaged/main/default/objects/Account_Ownership_Request__c/fields/Requestor_Role__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Role__c</fullName>
    <label>Requestor Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>