unpackaged/main/default/objects/Account_Ownership_Request__c/fields/Requestor_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Subteam__c</fullName>
    <label>Requestor Subteam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Subteam</valueSetName>
    </valueSet>
</CustomField>