unpackaged/main/default/objects/Account_Ownership_Request__c/fields/Requestor_Team__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Team__c</fullName>
    <label>Requestor Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Team</valueSetName>
    </valueSet>
</CustomField>